--- a/index.html
+++ b/index.html
@@ -312,6 +312,30 @@
             </section>
         </main>
 
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Carriers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Built this webpage for a fictonal tour agency company, while learning <a href="https://www.udemy.com/advanced-css-and-sass/" target="_blank" class="footer__link">Advanced CSS and Sass</a> online course. Copyright &copy; by Jonas Schmedtman. You are 100% allowed to use this webpage for both personal and commercial use, but not to claim it as your own design. A credit to the original author, Jonas Schmedtman, is of course highly appreciated.
+                    </p>
+                </div>
+            </div>
+        </footer>
+
         <!-- 
         <section class="grid-test">
             <div class="row">
